# token_discovery

./: .env.example  .gitignore  Dockerfile  OPERATIONS.md  fly.toml  system_design.md
.github/workflows/: ci.yml
token-pipeline/: .dockerignore  .gitignore  README.md  fly.toml  pyproject.toml  token_pipeline.db
token-pipeline/config/: chains.yaml  settings.yaml
token-pipeline/src/: main.py
token-pipeline/src/clients/: claude_agent.py  dex_paprika.py  dex_screener.py  gecko_terminal.py  github_client.py  goplus.py
token-pipeline/src/db/: __init__.py  models.py  repository.py
token-pipeline/src/notifiers/: __init__.py  discord.py  notion.py
token-pipeline/src/pipeline/: __init__.py  base.py  l1_discovery.py  l2_prefilter.py  l3_security.py  l4_fundamentals.py  l5_sentiment.py  l6_ranking.py
token-pipeline/src/token_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
token-pipeline/src/utils/: logger.py  rate_limiter.py  report.py  retry.py
token-pipeline/tests/integration/: test_pipeline_e2e.py
token-pipeline/tests/unit/: test_l2_prefilter.py  test_l3_security.py  test_l4_fundamentals.py  test_l6_ranking.py  test_notifiers.py
